<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MostrarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="@dimen/espacio_top"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/espacio_top"
        android:text="@string/nombre_completo"
        android:textSize="@dimen/tamaño_letra_segunda_actividad"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="87dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/espacio_top"
        android:text="@string/fecha_nacimiento"
        android:textSize="@dimen/tamaño_letra_segunda_actividad"
        tools:layout_editor_absoluteX="113dp"
        tools:layout_editor_absoluteY="145dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/espacio_top"
        android:text="@string/telefono"
        android:textSize="@dimen/tamaño_letra_segunda_actividad"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/espacio_top"
        android:text="@string/email"
        android:textSize="@dimen/tamaño_letra_segunda_actividad"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="264dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/espacio_top"
        android:text="@string/Descripcion_del_contacto"
        android:textSize="@dimen/tamaño_letra_segunda_actividad"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="327dp" />


</androidx.constraintlayout.widget.ConstraintLayout>