<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:actionBarNavMode="standard"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/editbutton2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="61dp"
        android:text="@string/siguiente"
        android:theme="@style/BotonSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp" />


    <TextView
        android:id="@+id/tvFormularioDeContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Formulario_de_contacto"
        android:textSize="@dimen/tamaño_letra"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="52dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/tvFormularioDeContacto"
        ></androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="100dp"
        android:hint="@string/nombre_completo"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="180dp"
        android:hint="@string/fecha_nacimiento"
        android:inputType="datetime"/>

    <EditText
        android:id="@+id/editTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="260dp"
        android:hint="@string/telefono"
        android:inputType="number"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="340dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>


    <EditText
        android:id="@+id/editDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="420dp"
        android:hint="@string/Descripcion_del_contacto"
        android:inputType="text"/>

</androidx.constraintlayout.widget.ConstraintLayout>